--- a/CRM_client/pubspec.yaml
+++ b/CRM_client/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   flutter_svg:
   get_it:
   provider:
+  intl:
+  mocktail:
 
   cupertino_icons: ^1.0.8
 
@@ -30,6 +32,7 @@ flutter:
   assets:
     - lib/assets/svg/app_logo.svg
     - lib/assets/svg/swiper.svg
+    - lib/assets/svg/qr.svg
 
   fonts:
     - family: MontserratAlternates
